--- a/locales/ca_ES/LC_MESSAGES/messages.po
+++ b/locales/ca_ES/LC_MESSAGES/messages.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: 2025-03-12 22:43+0100\n"
 "Last-Translator: Usuario <usuario@example.com>\n"
 "Language-Team: Catalan\n"
-"Language: ca_CA\n"
+"Language: ca_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
