add some changes

--- a/locales/ca_ES/LC_MESSAGES/messages.po
+++ b/locales/ca_ES/LC_MESSAGES/messages.po
@@ -97,3 +97,107 @@ msgstr "Si creus que això és un error, si us plau contacta amb el nostre equip
 
 msgid "Volver atrás"
 msgstr "Tornar enrere"
+
+# Nuevas traducciones para api_docs.twig
+
+msgid "Documentación API"
+msgstr "Documentació API"
+
+msgid "Referencia completa de endpoints disponibles"
+msgstr "Referència completa d'endpoints disponibles"
+
+msgid "Versión: v1"
+msgstr "Versió: v1"
+
+msgid "Introducción"
+msgstr "Introducció"
+
+msgid "Esta documentación describe los endpoints disponibles en la API de hongos. Todos los endpoints comienzan con"
+msgstr "Aquesta documentació descriu els endpoints disponibles a l'API de fongs. Tots els endpoints comencen amb"
+
+msgid "Las respuestas están en formato JSON y generalmente incluyen un campo"
+msgstr "Les respostes estan en format JSON i generalment inclouen un camp"
+
+msgid "para indicar si la solicitud fue exitosa."
+msgstr "per indicar si la sol·licitud va ser exitosa."
+
+msgid "¡Prueba los endpoints directamente desde esta documentación!"
+msgstr "Prova els endpoints directament des d'aquesta documentació!"
+
+msgid "Puedes enviar solicitudes reales y ver las respuestas sin salir de esta página."
+msgstr "Pots enviar sol·licituds reals i veure les respostes sense sortir d'aquesta pàgina."
+
+msgid "Fungi"
+msgstr "Fongs"
+
+msgid "Users"
+msgstr "Usuaris"
+
+msgid "Obtiene la lista completa de todos los hongos disponibles en la base de datos."
+msgstr "Obté la llista completa de tots els fongs disponibles a la base de dades."
+
+msgid "Probar endpoint"
+msgstr "Provar endpoint"
+
+msgid "Respuesta:"
+msgstr "Resposta:"
+
+msgid "Obtiene información detallada de un hongo específico por su ID."
+msgstr "Obté informació detallada d'un fong específic pel seu ID."
+
+msgid "ID del hongo:"
+msgstr "ID del fong:"
+
+msgid "Obtiene una lista paginada de hongos, especificando el número de página y la cantidad de elementos por página."
+msgstr "Obté una llista paginada de fongs, especificant el número de pàgina i la quantitat d'elements per pàgina."
+
+msgid "Número de página:"
+msgstr "Número de pàgina:"
+
+msgid "Elementos por página:"
+msgstr "Elements per pàgina:"
+
+msgid "Obtiene un hongo aleatorio de la base de datos."
+msgstr "Obté un fong aleatori de la base de dades."
+
+msgid "Crea un nuevo hongo en la base de datos."
+msgstr "Crea un nou fong a la base de dades."
+
+msgid "Datos del hongo (JSON):"
+msgstr "Dades del fong (JSON):"
+
+msgid "Actualiza la información de un hongo existente por su ID."
+msgstr "Actualitza la informació d'un fong existent pel seu ID."
+
+msgid "Datos a actualizar (JSON):"
+msgstr "Dades a actualitzar (JSON):"
+
+msgid "Elimina un hongo de la base de datos por su ID."
+msgstr "Elimina un fong de la base de dades pel seu ID."
+
+msgid "Obtiene la lista de usuarios registrados (sin información sensible como contraseñas)."
+msgstr "Obté la llista d'usuaris registrats (sense informació sensible com contrasenyes)."
+
+msgid "Crea un nuevo usuario en el sistema."
+msgstr "Crea un nou usuari al sistema."
+
+msgid "Datos del usuario (JSON):"
+msgstr "Dades de l'usuari (JSON):"
+
+msgid "tóxico"
+msgstr "tòxic"
+
+msgid "Bosques de coníferas y abedules"
+msgstr "Boscos de coníferes i bedolls"
+
+msgid "excelente-comestible"
+msgstr "excel·lent-comestible"
+
+msgid "Bosques mixtos y de coníferas"
+msgstr "Boscos mixtos i de coníferes"
+
+msgid "nuevo_usuario"
+msgstr "nou_usuari"
+
+msgid "contraseña_segura"
+msgstr "contrasenya_segura"
