new command makefile

--- a/locales/ca_ES/LC_MESSAGES/home.po
+++ b/locales/ca_ES/LC_MESSAGES/home.po
@@ -11,6 +11,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid "Hongos"
+msgstr "Bolets"
+
+
 #: templates/pages/home.twig:29
 msgid "Descubre la diversidad de hongos, aprende sobre sus características y explora su taxonomía en nuestra base de datos completa."
 msgstr "Descobreix la diversitat de bolets, aprèn sobre les seves característiques i explora la seva taxonomia a la nostra base de dades completa."
@@ -22,6 +26,34 @@ msgstr "Bolet Aleatori"
 #: templates/pages/home.twig:32
 msgid "Ver Estadísticas"
 msgstr "Veure Estadístiques"
+
+msgid "Sin valor culinario"
+msgstr "Sense valor culinari"
+
+msgid "Tóxica"
+msgstr "Tòxica"
+
+msgid "Venenosa"
+msgstr "Venenosa"
+
+msgid "Recomendados"
+msgstr "Recomanats"
+
+msgid "buen comestible"
+msgstr "bon comestible"
+
+msgid "buen comestible"
+msgstr "bon comestible"
+
+msgid "sin valor"
+msgstr "sense valor"
+
+msgid "comestible"
+msgstr "comestible"
+
+msgid "no comestible"
+msgstr "no comestible"
+
 
 #: templates/pages/home.twig:45
 msgid "Buscar Hongos"
