--- a/locales/ca_ES/LC_MESSAGES/profile.po
+++ b/locales/ca_ES/LC_MESSAGES/profile.po
@@ -129,3 +129,273 @@ msgstr "Explorar bolets"
 
 msgid "Ver detalles"
 msgstr "Veure detalls"
+
+msgid "Todas las funciones de edición de perfil están disponibles solo con"
+msgstr "Totes les funcions d'edició de perfil només estan disponibles amb"
+
+msgid "cuenta premium"
+msgstr "compte premium"
+
+msgid "Esta función está bloqueada. Para cambiar tu foto de perfil necesitas una"
+msgstr "Aquesta funció està bloquejada. Per canviar la teva foto de perfil necessites un"
+
+msgid "Para eliminar tu cuenta, por favor contacta con un administrador en correofake@mgrl39.com"
+msgstr "Per eliminar el teu compte, si us plau contacta amb un administrador a correofake@mgrl39.com"
+
+msgid "Solo los administradores pueden eliminar cuentas por motivos de seguridad."
+msgstr "Només els administradors poden eliminar comptes per motius de seguretat."
+
+msgid "Cerrar"
+msgstr "Tancar"
+
+msgid "¿Quieres contribuir con tus conocimientos?"
+msgstr "Vols contribuir amb els teus coneixements?"
+
+msgid "Explora nuestra base de datos de hongos y comparte tus observaciones con la comunidad."
+msgstr "Explora la nostra base de dades de bolets i comparteix les teves observacions amb la comunitat."
+
+msgid "Explorar catálogo"
+msgstr "Explorar catàleg"
+
+msgid "¿Sabías que...?"
+msgstr "Sabies que...?"
+
+msgid "Otro dato curioso"
+msgstr "Un altre fet curiós"
+
+msgid "Frases micológicas"
+msgstr "Frases micològiques"
+
+msgid "Otra frase"
+msgstr "Una altra frase"
+
+msgid "Sobre"
+msgstr "Sobre"
+
+msgid "Este usuario no ha añadido una biografía."
+msgstr "Aquest usuari no ha afegit una biografia."
+
+msgid "Usuario micófilo"
+msgstr "Usuari micòfil"
+
+msgid "No tienes hongos favoritos todavía."
+msgstr "Encara no tens bolets preferits."
+
+msgid "No has dado \"me gusta\" a ningún hongo todavía."
+msgstr "Encara no has donat \"m'agrada\" a cap bolet."
+
+msgid "Error al cargar favoritos. Intenta nuevamente."
+msgstr "Error en carregar els preferits. Torna-ho a provar."
+
+msgid "Error al cargar likes. Intenta nuevamente."
+msgstr "Error en carregar els \"m'agrada\". Torna-ho a provar."
+
+msgid "Vista general"
+msgstr "Vista general"
+
+msgid "Me gusta"
+msgstr "M'agrada"
+
+msgid "Perfil"
+msgstr "Perfil"
+
+msgid "Mis comentarios"
+msgstr "Els meus comentaris"
+
+msgid "Acción"
+msgstr "Acció"
+
+msgid "Fecha"
+msgstr "Data"
+
+msgid "Sin actividad reciente."
+msgstr "Sense activitat recent."
+
+msgid "Ver más"
+msgstr "Veure més"
+
+msgid "Miembros"
+msgstr "Membres"
+
+msgid "Buscar miembros"
+msgstr "Cercar membres"
+
+msgid "Sin resultados."
+msgstr "Sense resultats."
+
+msgid "Ver perfil"
+msgstr "Veure perfil"
+
+msgid "Año"
+msgstr "Any"
+
+msgid "Mes"
+msgstr "Mes"
+
+msgid "Día"
+msgstr "Dia"
+
+msgid "Hora"
+msgstr "Hora"
+
+msgid "Minuto"
+msgstr "Minut"
+
+msgid "Segundo"
+msgstr "Segon"
+
+msgid "hace"
+msgstr "fa"
+
+msgid "justo ahora"
+msgstr "ara mateix"
+
+msgid "Cargando datos..."
+msgstr "Carregant dades..."
+
+msgid "No se encontraron resultados."
+msgstr "No s'han trobat resultats."
+
+msgid "Editar"
+msgstr "Editar"
+
+msgid "Guardar"
+msgstr "Desar"
+
+msgid "Eliminar"
+msgstr "Eliminar"
+
+msgid "Enviar"
+msgstr "Enviar"
+
+msgid "Actualizar"
+msgstr "Actualitzar"
+
+msgid "Cerrar sesión"
+msgstr "Tancar sessió"
+
+msgid "Volver"
+msgstr "Tornar"
+
+msgid "Idioma"
+msgstr "Idioma"
+
+msgid "Cambiar idioma"
+msgstr "Canviar idioma"
+
+msgid "Confirmar"
+msgstr "Confirmar"
+
+msgid "No tienes permisos para realizar esta acción."
+msgstr "No tens permisos per realitzar aquesta acció."
+
+msgid "Operación exitosa"
+msgstr "Operació exitosa"
+
+msgid "Se produjo un error. Inténtalo de nuevo."
+msgstr "S'ha produït un error. Torna-ho a provar."
+
+msgid "Sin datos disponibles"
+msgstr "Sense dades disponibles"
+
+msgid "Configuración guardada correctamente"
+msgstr "Configuració desada correctament"
+
+msgid "Contraseña cambiada correctamente"
+msgstr "Contrasenya canviada correctament"
+
+msgid "No tienes permisos para ver este contenido."
+msgstr "No tens permisos per veure aquest contingut."
+
+msgid "Intento de inicio de sesión fallido"
+msgstr "Intent d'inici de sessió fallit"
+
+msgid "Correo electrónico o contraseña incorrectos"
+msgstr "Correu electrònic o contrasenya incorrectes"
+
+msgid "Nombre de usuario ya registrado"
+msgstr "Nom d'usuari ja registrat"
+
+msgid "Correo electrónico ya registrado"
+msgstr "Correu electrònic ja registrat"
+
+msgid "Error desconocido"
+msgstr "Error desconegut"
+
+msgid "Página no encontrada"
+msgstr "Pàgina no trobada"
+
+msgid "Acceso denegado"
+msgstr "Accés denegat"
+
+msgid "Se ha cerrado la sesión correctamente"
+msgstr "S'ha tancat la sessió correctament"
+
+msgid "Intento de inicio de sesión exitoso"
+msgstr "Intent d'inici de sessió exitós"
+
+msgid "Registro completado correctamente"
+msgstr "Registre completat correctament"
+
+msgid "La contraseña actual es incorrecta"
+msgstr "La contrasenya actual és incorrecta"
+
+msgid "La nueva contraseña no coincide con la confirmación"
+msgstr "La nova contrasenya no coincideix amb la confirmació"
+
+msgid "Perfil actualizado correctamente"
+msgstr "Perfil actualitzat correctament"
+
+msgid "Tu cuenta ha sido eliminada correctamente"
+msgstr "El teu compte ha estat eliminat correctament"
+
+msgid "Se requiere autenticación"
+msgstr "Es requereix autenticació"
+
+msgid "Tu sesión ha caducado"
+msgstr "La teva sessió ha caducat"
+
+msgid "Iniciar sesión"
+msgstr "Iniciar sessió"
+
+msgid "Registrarse"
+msgstr "Registrar-se"
+
+msgid "Nombre completo"
+msgstr "Nom complet"
+
+msgid "Confirmar email"
+msgstr "Confirmar correu electrònic"
+
+msgid "Correo electrónico confirmado correctamente"
+msgstr "Correu electrònic confirmat correctament"
+
+msgid "No se pudo confirmar el correo electrónico"
+msgstr "No s'ha pogut confirmar el correu electrònic"
+
+msgid "Código de confirmación inválido"
+msgstr "Codi de confirmació invàlid"
+
+msgid "Solicitar nuevo código"
+msgstr "Sol·licitar un nou codi"
+
+msgid "Código enviado correctamente"
+msgstr "Codi enviat correctament"
+
+msgid "Se ha enviado un enlace de restablecimiento a tu correo electrónico"
+msgstr "S'ha enviat un enllaç de restabliment al teu correu electrònic"
+
+msgid "Restablecer contraseña"
+msgstr "Restablir contrasenya"
+
+msgid "Establecer nueva contraseña"
+msgstr "Establir nova contrasenya"
+
+msgid "La contraseña ha sido restablecida correctamente"
+msgstr "La contrasenya ha estat restablerta correctament"
+
+msgid "El token de restablecimiento ha caducado"
+msgstr "El token de restabliment ha caducat"
+
+msgid "Actualizar contraseña"
+msgstr "Actualitzar contrasenya"
