Actualización de formularios de autenticación y componentes de interfaz

--- a/locales/ca_ES/LC_MESSAGES/about.po
+++ b/locales/ca_ES/LC_MESSAGES/about.po
@@ -11,6 +11,12 @@ msgstr "La Nostra Missió"
 msgid "Recopilación de Datos"
 msgstr "Recopilació de Dades"
 
+msgid "Proyecto"
+msgstr "Projecte"
+
+msgid "Información detallada sobre hongos obtenida de fuentes confiables"
+msgstr "Informació detallada sobre fongs obtinguda de fonts confiables"
+
 msgid "Los datos se extraen mediante técnicas avanzadas de web scraping y se procesan para garantizar información precisa y consistente sobre cada especie de hongo."
 msgstr "Les dades s'extreuen mitjançant tècniques avançades de web scraping i es processen per garantir informació precisa i consistent sobre cada espècie de fong."
 
