--- a/locales/ca_ES/LC_MESSAGES/about.po
+++ b/locales/ca_ES/LC_MESSAGES/about.po
@@ -11,6 +11,9 @@ msgstr "La Nostra Missió"
 msgid "Recopilación de Datos"
 msgstr "Recopilació de Dades"
 
+msgid "Conoce nuestro proyecto y objetivos principales"
+msgstr "Conèix el nostre projecte i objectius principals"
+
 msgid "Proyecto"
 msgstr "Projecte"
 
