--- a/locales/ca_ES/LC_MESSAGES/home.po
+++ b/locales/ca_ES/LC_MESSAGES/home.po
@@ -159,3 +159,39 @@ msgstr "No hi ha bolets disponibles amb els criteris seleccionats."
 #: templates/pages/home.twig:191
 msgid "Error al cargar los hongos. Intente nuevamente."
 msgstr "Error en carregar els bolets. Torneu-ho a provar."
+
+msgid "¿Sabías que los hongos son más cercanos a los animales que a las plantas?"
+msgstr "Sabies que els bolets són més propers als animals que a les plantes?"
+
+msgid "El micelio de algunos hongos puede extenderse por varios kilómetros bajo tierra."
+msgstr "El miceli d'alguns bolets pot estendre's per diversos quilòmetres sota terra."
+
+msgid "El hongo más grande del mundo es un Armillaria ostoyae en Oregon, que cubre 8.9 km²."
+msgstr "El bolet més gran del món és un Armillaria ostoyae a Oregon, que cobreix 8,9 km²."
+
+msgid "Algunos hongos pueden descomponer plástico y ayudar al medio ambiente."
+msgstr "Alguns bolets poden descompondre plàstic i ajudar al medi ambient."
+
+msgid "Las trufas pueden costar hasta 6.000€ por kilogramo."
+msgstr "Les tòfones poden costar fins a 6.000€ per quilogram."
+
+msgid "El 90% de las plantas dependen de asociaciones con hongos para sobrevivir."
+msgstr "El 90% de les plantes depenen d'associacions amb bolets per sobreviure."
+
+msgid "Existen más de 120.000 especies de hongos conocidas."
+msgstr "Existeixen més de 120.000 espècies de bolets conegudes."
+
+msgid "La penicilina, primer antibiótico descubierto, proviene de un hongo."
+msgstr "La penicil·lina, primer antibiòtic descobert, prové d'un bolet."
+
+msgid "Algunos hongos pueden brillar en la oscuridad (bioluminiscencia)."
+msgstr "Alguns bolets poden brillar en la foscor (bioluminescència)."
+
+msgid "Los hongos han existido en la Tierra desde hace más de 1.300 millones de años."
+msgstr "Els bolets han existit a la Terra des de fa més de 1.300 milions d'anys."
+
+msgid "¿Sabías que...?"
+msgstr "Sabies que...?"
+
+msgid "Otro dato curioso"
+msgstr "Un altre fet curiós"
