--- a/locales/ca_ES/LC_MESSAGES/admin.po
+++ b/locales/ca_ES/LC_MESSAGES/admin.po
@@ -14,9 +14,6 @@ msgstr ""
 msgid "Panel de Administración"
 msgstr "Panell d'Administració"
 
-msgid "Gestión de Usuarios"
-msgstr "Gestió d'Usuaris"
-
 msgid "Gestión de Hongos"
 msgstr "Gestió de Fongs"
 
@@ -163,3 +160,51 @@ msgstr "Veure lloc"
 
 msgid "Cerrar sesión"
 msgstr "Tancar sessió"
+
+msgid "Panel de Control"
+msgstr "Panell de Control"
+
+msgid "Dashboard"
+msgstr "Tauler de Control"
+
+msgid "Usuarios"
+msgstr "Usuaris"
+
+msgid "Hongos 🍄"
+msgstr "Fongs 🍄"
+
+msgid "ID"
+msgstr "ID"
+
+msgid "Email"
+msgstr "Correu"
+
+msgid "Gestión de Usuarios"
+msgstr "Gestió d'Usuaris"
+
+msgid "Fecha creación"
+msgstr "Data de creació"
+
+msgid "Nueva contraseña (dejar en blanco para no cambiar)"
+msgstr "Nova contrasenya (deixar en blanc per no canviar)"
+
+msgid "Nueva contraseña"
+msgstr "Nova contrasenya"
+
+msgid "(deixa en blanco para no cambiar)"
+msgstr "(deixar en blanc per no canviar)"
+
+msgid "Fecha de creación"
+msgstr "Data de creació"
+
+msgid "Nombre"
+msgstr "Nom"
+
+msgid "Testing Nuevo"
+msgstr "Provant Nou"
+
+msgid "FinalNuevo"
+msgstr "FinalNou"
+
+msgid "buen-comestible"
+msgstr "bon-comestible"
