--- a/locales/en_US/LC_MESSAGES/admin.po
+++ b/locales/en_US/LC_MESSAGES/admin.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: 2025-03-17 14:30+0100\n"
 "Last-Translator: Administrator\n"
 "Language-Team: English\n"
-"Language: en_US\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,11 +14,8 @@ msgstr ""
 msgid "Panel de Administración"
 msgstr "Administration Panel"
 
-msgid "Gestión de Usuarios"
-msgstr "User Management"
-
 msgid "Gestión de Hongos"
-msgstr "Fungi Management"
+msgstr "Mushroom Management"
 
 msgid "Crear Usuario"
 msgstr "Create User"
@@ -27,10 +24,10 @@ msgid "Editar Usuario"
 msgstr "Edit User"
 
 msgid "Crear Hongo"
-msgstr "Create Fungus"
+msgstr "Create Mushroom"
 
 msgid "Editar Hongo"
-msgstr "Edit Fungus"
+msgstr "Edit Mushroom"
 
 msgid "Nombre de usuario"
 msgstr "Username"
@@ -117,7 +114,7 @@ msgid "Himenio"
 msgstr "Hymenium"
 
 msgid "Pie"
-msgstr "Stem"
+msgstr "Stipe"
 
 msgid "Carne"
 msgstr "Flesh"
@@ -135,25 +132,25 @@ msgid "Total Usuarios"
 msgstr "Total Users"
 
 msgid "Total Hongos"
-msgstr "Total Fungi"
+msgstr "Total Mushrooms"
 
 msgid "Usuario creado correctamente"
-msgstr "User successfully created"
+msgstr "User created successfully"
 
 msgid "Usuario eliminado correctamente"
-msgstr "User successfully deleted"
+msgstr "User deleted successfully"
 
 msgid "Usuario actualizado correctamente"
-msgstr "User successfully updated"
+msgstr "User updated successfully"
 
 msgid "Hongo creado correctamente"
-msgstr "Fungus successfully created"
+msgstr "Mushroom created successfully"
 
 msgid "Hongo eliminado correctamente"
-msgstr "Fungus successfully deleted"
+msgstr "Mushroom deleted successfully"
 
 msgid "Hongo actualizado correctamente"
-msgstr "Fungus successfully updated"
+msgstr "Mushroom updated successfully"
 
 msgid "Sinónimos"
 msgstr "Synonyms"
@@ -163,3 +160,51 @@ msgstr "View site"
 
 msgid "Cerrar sesión"
 msgstr "Logout"
+
+msgid "Panel de Control"
+msgstr "Control Panel"
+
+msgid "Dashboard"
+msgstr "Dashboard"
+
+msgid "Usuarios"
+msgstr "Users"
+
+msgid "Hongos 🍄"
+msgstr "Mushrooms 🍄"
+
+msgid "ID"
+msgstr "ID"
+
+msgid "Email"
+msgstr "Email"
+
+msgid "Gestión de Usuarios"
+msgstr "User Management"
+
+msgid "Fecha creación"
+msgstr "Creation date"
+
+msgid "Nueva contraseña (dejar en blanco para no cambiar)"
+msgstr "New password (leave blank to not change)"
+
+msgid "Nueva contraseña"
+msgstr "New password"
+
+msgid "(deixa en blanco para no cambiar)"
+msgstr "(leave blank to not change)"
+
+msgid "Fecha de creación"
+msgstr "Creation date"
+
+msgid "Nombre"
+msgstr "Name"
+
+msgid "Testing Nuevo"
+msgstr "Testing New"
+
+msgid "FinalNuevo"
+msgstr "FinalNew"
+
+msgid "buen-comestible"
+msgstr "good-edible"
